# vehicle_accounting

./: .env.docker  .gitignore  Dockerfile  Makefile  config.json  cypress.config.js  docker-compose.yaml  geojson.txt  kafka_consumer.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  res.html  test_build.sh
.github/workflows/: tests.yml
cypress/e2e/: auth.cy.js  vehicles.cy.js
cypress/support/: commands.js
db_engine/: base.py
docker/: app.Dockerfile  app.yaml  gps-service.Dockerfile  gps-service.yaml  kafka.yaml  monitoring.yaml  nginx.yaml  storages.yaml  telegram.Dockerfile  telegram.yaml
gps_service/: pyproject.toml
gps_service/src/: main.py
integration_tests/: conftest.py  factories.py
integration_tests/tests/: test_auth.py  test_web_views.py
load-tests/src/: locust_max_rps.py
monitoring/prometheus/alert_templates/: email.tmpl  telegram.tmpl
monitoring/prometheus/prometheus_config/: alertmanager.yml  prometheus.yml  rules.yaml
nginx/: nginx.conf
src/apps/accounts/: admin.py  forms.py  models.py  views.py
src/apps/enterprises/: admin.py  apps.py  mixins.py  models.py  serializers.py  views.py
src/apps/importer_exporter/: apps.py  views.py
src/apps/reports/: mixins.py  services.py  views.py
src/apps/tracking/: admin.py  apps.py  mixins.py  models.py  serializers.py  services.py  signals.py  views.py
src/apps/vehicles/: admin.py  forms.py  mixins.py  models.py  serializers.py  views.py
src/core/: asgi.py  exceptions.py  mixins.py  permissions.py  views.py  wsgi.py
src/core/settings/: base.py  local.py  test.py
src/core/templates/: base.html  navigation.html
src/core/urls/: api.py  core.py  swagger.py
src/core/utils/: time.py
src/static/js/: formatDatetime.js
telegram/: main.py
telegram_service/: pyproject.toml
telegram_service/src/: main.py
tests/: conftest.py  factories.py  test_driver.py  test_permission.py
tests/integration/: test_auth.py  test_web_views.py
vehicle_accounting/: admin.py  apps.py  asgi.py  exceptions.py  forms.py  middleware.py  models.py  permissions.py  reports.py  routing.py  serializers.py  services.py  settings.py  signals.py  test_settings.py  urls.py  vehicle_status.py  views.py  wsgi.py
vehicle_accounting/management/commands/: archive_gps_points.py  gen_track.py  (+1 more)
vehicle_accounting/migrations/: 0001_initial.py  0002_alter_vehicle_car_number.py  0002_manager_brand.py  0003_alter_vehicle_car_number.py  0003_remove_manager_brand.py  0004_brand_vehicle_acc_id_ed80ca_idx_and_more.py  0004_enterprise.py  0005_alter_brand_vehicle_type.py  0005_driver.py  0006_enterprise_timezone_vehicle_purchase_datetime.py  0006_vehicle_enterprise_vehicledriver_vehicle_drivers.py  0007_alter_enterprise_timezone_vehiclegpspoint_and_more.py  0007_vehicledriver_unique_vehicle_driver.py  0008_alter_enterprise_timezone.py  0008_vehicledriver_is_active_and_more.py  0009_alter_enterprise_timezone_trip.py  0010_remove_trip_description_alter_enterprise_timezone.py  0011_trip_end_address_trip_end_point_trip_start_address_and_more.py  0012_remove_trip_end_address_remove_trip_start_address_and_more.py  0013_brand_uuid_enterprise_uuid_trip_uuid_vehicle_uuid_and_more.py  0014_generate_uuid.py  0015_alter_brand_uuid_alter_enterprise_timezone_and_more.py  0016_alter_enterprise_timezone_alter_vehiclegpspoint_uuid.py  0017_auto_20250720_1328.py
vehicle_accounting/templates/: base.html  base_import.html  navigation.html  pagination.html
vehicle_accounting/templatetags/: custom_filter.py
vehicle_accounting/utils/: time.py
vehicle_accounting_pgdb/: postmaster.pid
vehicle_accounting_pgdb/global/: 1260  1262  2671  2672  2964  2965  pg_control  pg_internal.init
vehicle_accounting_pgdb/pg_stat/: pgstat.stat
vehicle_accounting_pgdb/pg_xact/: 0000
еуые/: 0003_manager_phone.py  0004_remove_manager_phone_manager_is_on_vacation.py  test_permission.py  test_vehicle.py  tests_vehicledriver.py
(+913 files in other folders)
