[project]
name = "vehicle-accounting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.5",
    "djangorestframework-simplejwt>=5.4.0",
    "djangorestframework>=3.15.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "faker>=36.1.1",
    "django-bootstrap5>=24.3",
    "pytz>=2025.1",
    "djangorestframework-gis>=1.1",
    "requests>=2.32.3",
]
