[tool.poetry]
name = "telegram-service"
version = "0.1.0"
description = ""
authors = ["mileoa <ezkimozzzzz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "^0.9.9"
kafka-python = "^2.2.15"
python-telegram-bot = "^22.3"
aiohttp = "^3.12.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
